--- a/config/templates/shop/orders.html
+++ b/config/templates/shop/orders.html
@@ -6,7 +6,7 @@
 
 {% block content %}
 
-<h2 class="mb-4">Order History</h2>
+<h2 class="mb-4" style="text-align: center;">Order History</h2>
 <div class="row justify-content-center">
     {% for order in orders %}
     <div class="col-12 col-md-6 col-lg-4 mb-4 d-flex justify-content-center">
